# commons

./: .gitignore  .gitlab-ci.yml  .gitmodules  .vd-lint  CMakeLists.txt  Doxyfile.in  README.md  main.cpp
curve25519/: curve25519.h  x25519-x86_64.cpp
def/enum/database/: ConversationType.the  IdentityType.the  SAlgorithm.the
def/enum/logger/: LogLevel.the
def/enum/message/: HintType.the  SendMethodType.the
def/enum/network/: IPProtocol.the
def/enum/server/: ProtocolMessageState.the  ProtocolPushOpcode.the  ProtocolResult.the
def/flatbuffers/client/: CBasicMessage.thx  CContent.thx  CIntroduce.thx  CKeyExchange.thx
def/flatbuffers/network/: Header.thx  HeartBeat.thx
def/flatbuffers/test/: TestFuture.thx  TestLegacy.thx  VarMsg.thx  sometest.thx
def/sqx/: SConversation.sqx  SKeyExchange.sqx  SMessage.sqx
enum/key/: KeyExchangeState.the
enum/logger/: LogLevel.the
enum/message/: ContentType.the  PayloadType.the  SendMethodType.the
enum/notification/: NotificationType.the
enum/result/: ResultCodeStatus.the
enum/server/: ProtocolResult.the  ProtocolVersion.the
enum/test/: TestEnum.the
include/: Buffer.h  SecureUniquePtr.h  Socket.h
include/ThinXchange/: message.template.h  sometest.h  sometest.thx
include/commons/: Bitfield.h  Buffer.h  BufferRange.h  ConstexprString.h  KeyValueStorage.h  SQXBase.h  SecureStorage.h  Serializable.h  UTF8Decoder.h  UTF8Encoder.h  ValidPtr.h  conversions.h  enum.template.h  helper.h  protocol.template.h  sqx.template.h
include/commons/curve25519/: curve25519.h
include/commons/log/: ILogger.h  Log.h
include/commons/network/: CertificateStorage.h  Connection.h  ConnectionInfo.h  SSLContext.h
include/commons/thread/: IMessageQueue.h  IQueue.h  IQueueWorker.h  MessageQueue.h  (+2 more)
include/curve25519/: curve25519.h
include/libCom/: Bitfield.h  BlockCache.h  Buffer.h  BufferRange.h  DevNull.h  FastStringMap.h  KeyValueStorage.h  KeyValueStorageNew.h  OSFileWrapper.h  Range.h  Request.h  SecureStorage.h  SecureUniquePtr.h  Serializable.h  String.h  UTF8Decoder.h  ValidPtr.h  _conversions_crossplatform.h  conversions.h  conversions_crossplatform.h  enum.template.h  errorcodes.h  helper.h  message.template.h  openssl_hook.h  protocol.template.h
include/network/: CertificateStorage.h  Connection.h  ConnectionInfo.h  ConnectionWait.h  PushConnection.h  SSLContext.h
protocol/: Account.thx  OuterMessage.thx  RecvMessage.thx  VirtualEntity.thx  account.thx  protocol.messages
protocol/client/: BaseGroupMessage.thx  CBasicMessage.thx  CContentMessage.thx  CGrpAccept.thx  CGrpInvite.thx  CGrpInviteAcceptMessage.thx  CGrpInviteFinalMessage.thx  CGrpMember.thx  CSymKeyExchangeMessage.thx  ClientMessage.thx  GMember.thx  GReroll.thx  MessageFlags.thx  PayloadMessage.thx  PluginMessage.thx  PublicKeyMessageClear.thx  SymmetricKeyAnnouncement.thx
protocol/database/: Account.thx  BlockInternal.thx  ChatEntry.thx  EncryptedAccount.thx  ExportInfo.thx  Friend.thx  GroupAcceptInfo.thx  GroupEntry.thx  GroupMember.thx  OuterMessage.thx  VirtualEntity.thx
protocol/network/: CGrpInviteMessage.thx  GetMessages.thx  Header.thx  KeyID.thx  MsgHeader.thx  MsgKeyLength.thx  MsgKeyResp.thx  MsgRecvResp.thx  MsgResp.thx  MsgSendMessage.thx  OuterMessage.thx  RecvResp.thx  Resp.thx  SendSingleMessage.thx  SingleMessage.thx
protocol/notification/: GroupInvitation.thx  Notification.thx
protocol/push/: Downstream.thx  ExtendedHeader.thx  Pbox.thx  PboxCount.thx  PushHeader.thx
protocol/test/: EnumMsg.thx  TestClass.thx  VarMsg.thx  VarTestClass.thx  sometest.thx
sqx/database/: Friend.sqx  SAttachment.sqx  SContact.sqx  SFriend.sqx  SGroup.sqx  SGroupInvite.sqx  SIdentity.sqx  SMessage.sqx  SPending.sqx
src/: BlockCache.cpp  Buffer.cpp  BufferRange.cpp  DevNull.cpp  KeyValueStorage.cpp  Log.cpp  Request.cpp  SecureUniquePtr.cpp  Socket.cpp  String.cpp  openssl_hook.cpp
src/commons/: Buffer.cpp  DevNull.cpp  KeyValueStorage.cpp  Log.cpp  SecureUniquePtr.cpp  String.cpp
src/curve25519/: curve25519.cpp  internal.h  x25519-x86_64.cpp
src/libCom/: Buffer.cpp
src/network/: CertificateStorage.cpp  Connection.cpp  ConnectionWait.cpp  NativeInit.h  NativeWrapper.cpp  NativeWrapper.h  PushConnection.cpp  Resolve.h  SSLContext.cpp
test/: AutoPtrTest.cpp  BitfieldTest.cpp  BitfieldTest.h  BlockCacheTest.cpp  BlockCacheTest.h  BufferTest.cpp  BufferTest.h  CMakeLists.txt  CertificateStorageTest.cpp  CertificateStorageTest.h  ConnectionTest.cpp  ConnectionTest.h  ContainerTest.cpp  ContainerTest.h  ConversionTest.cpp  ConversionTest.h  DevNullTest.cpp  ED25519Test.cpp  ED25519Test.h  EnumTest.cpp  EnumTest.h  FastStringMapTest.cpp  FastStringMapTest.h  KeyValueStorageTest.cpp  KeyValueStorageTest.h  LogTest.cpp  LogTest.h  SecureStorageTest.cpp  SecureStorageTest.h  SecureUniquePointerTest.cpp  SecureUniquePointerTest.h  StringTest.cpp  StringTest.h  UTF8DecoderTest.cpp  UTF8DecoderTest.h  ValidPtrTest.cpp  ValidPtrTest.h  X25519Test.cpp  X25519Test.h  custom_assert.h  (+3 more)
test/base/: BitfieldTest.cpp  BitfieldTest.h  ConstexprStringTest.cpp  ConstexprStringTest.h  ContainerTest.cpp  ContainerTest.h  EnumTest.cpp  EnumTest.h  FileTest.cpp  FileTest.h  FlatbuffersTest.cpp  FlatbuffersTest.h  KeyValueStorageTest.cpp  LogTest.cpp  LogTest.h  ProtobufTest.cpp  ProtobufTest.h  ResultTest.cpp  ResultTest.h  TestFutureExtended.h  ThreadLocalTest.cpp  ThreadLocalTest.h  ThreadTest.cpp  ThreadTest.h  UTF8DecoderTest.cpp  UtilTest.cpp  UtilTest.h  ValidPtrTest.cpp  ValidPtrTest.h
test/curve25519/: ED25519Test.cpp  ED25519Test.h  SecureStorageTest.cpp  X25519Test.cpp  X25519Test.h
test/network/: CertStoreTest.cpp  CertStoreTest.h  CertificateStorageTest.cpp  CertificateStorageTest.h  ConnectionTest.cpp  ConnectionTest.h  UriTest.cpp  UriTest.h
tools/: common.py  definition_generation.py  enum_generator.py  generator.py  protocol_generation.py  protocol_generator.py  protocol_list.py
tools/ThinXchange/: ThinXchange.sh  generator.py  messages.list
tools/enum/: generator.py
tools/protocol/: protocol_generation.py
tools/sqx/: sqlite_generator.py
(+73 files in other folders)
